--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -1,43 +1,22 @@
-name: Deploy Doxygen Docs
+name: Deploy
 
 on:
   push:
     branches: [main]
-  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v2
+      
+      - name: Create simple page
+        run: |
+          mkdir -p docs
+          echo "<html><body><h1>Timirbaev Project</h1><p>Deployed: $(date)</p></body></html>" > docs/index.html
+          
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          fetch-depth: 0
-          
-      - name: Setup Git
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          
-      - name: Install Doxygen
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y doxygen graphviz
-          
-      - name: Generate Documentation
-        run: |
-          mkdir -p docs/html
-          doxygen Doxyfile 2>&1 | tee doxygen.log
-          
-      - name: Check generated files
-        run: |
-          echo "Generated files:"
-          ls -la docs/html/ || echo "No html directory"
-          
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/html
-          force_orphan: true
-          keep_files: false
+          branch: gh-pages
+          folder: docs
