--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -1,22 +1,29 @@
-name: Deploy
+name: Deploy to Pages
 
 on:
   push:
     branches: [main]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
-      
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+        
       - name: Create simple page
         run: |
-          mkdir -p docs
-          echo "<html><body><h1>Timirbaev Project</h1><p>Deployed: $(date)</p></body></html>" > docs/index.html
+          mkdir -p _site
+          echo "<h1>Timirbaev Project</h1><p>Test page</p>" > _site/index.html
+          
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: '_site'
           
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: docs
+        uses: actions/deploy-pages@v2
